<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0408"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="390dp"
        android:layout_height="137dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:background="#9DFFD4"
        android:gravity="center|end"
        android:padding="10dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/ac"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/ac"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/power"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/power"
            android:textColor="#101702"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/delete"
            android:textColor="#130109"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/div"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/divide"
            android:textColor="#130202"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_7"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/eight"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_8"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nine"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_9"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mul"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/x"
            android:textColor="#130202"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/four"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/five"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_5"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_6"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/sub"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/minus"
            android:textColor="#130202"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_1"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/two"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_2"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_3"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/plus"
            android:textColor="#130202"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/zero"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/_0"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/point"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/point"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ans"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/ans"
            android:textColor="#009688"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equal"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_btn"
            android:onClick="ButtonClick"
            android:text="@string/equal"
            android:textColor="#130202"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />


    </LinearLayout>
</LinearLayout>





